--- a/youtube.html
+++ b/youtube.html
@@ -13,13 +13,13 @@
 <body style="padding-top: 50px;">
   <div class="header">
     <div class="left-header">
-      <img class="hamburger-logo" src="/icons/hamburger-menu.svg">
-      <img class="youtube-logo" src="/icons/youtube-logo.svg">
+      <img class="hamburger-logo" src="icons/hamburger-menu.svg">
+      <img class="youtube-logo" src="icons/youtube-logo.svg">
     </div>
     <div class="middle-header">
       <input class="search-bar" type="text" placeholder="Search">
-      <button class="search-button"><img class="search-icon" src="/icons/search.svg"></button>
-      <button class="voice-button"><img class="voice-icon" src="/icons/voice-search-icon.svg"></button>
+      <button class="search-button"><img class="search-icon" src="icons/search.svg"></button>
+      <button class="voice-button"><img class="voice-icon" src="icons/voice-search-icon.svg"></button>
     </div>
     <div class="right-header">
       <img class="upload-button" src="icons/upload.svg">
@@ -30,17 +30,17 @@
   </div>
   <div class="sidebar">
     <div class="home">
-      <img src="/icons/home.svg">
+      <img src="icons/home.svg">
     </div>>
   </div>
   <div>
     <div class="grid-template">
       <div class="card-preview">
         <div>
-          <img class="thumbnail" src="/youtubeimages/thumbnail-1.webp">
+          <img class="thumbnail" src="youtubeimages/thumbnail-1.webp">
         </div>
         <div class="grid-video-info">
-          <div class="profile"><img class="channel-profile" src="/youtubeimages/channel-1.jpeg" alt="">
+          <div class="profile"><img class="channel-profile" src="youtubeimages/channel-1.jpeg" alt="">
           </div>
           <div class="title">
             <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
@@ -52,10 +52,10 @@
 
       <div class="card-preview">
         <div>
-          <img class="thumbnail" src="/youtubeimages/thumbnail-2.webp">
+          <img class="thumbnail" src="youtubeimages/thumbnail-2.webp">
         </div>
         <div class="grid-video-info">
-          <div class="profile"><img class="channel-profile" src="/youtubeimages/channel-2.jpeg" alt="">
+          <div class="profile"><img class="channel-profile" src="youtubeimages/channel-2.jpeg" alt="">
           </div>
           <div class="title">
             <p class="video-title">Try Not To Laugh Challenge #9</p>
@@ -67,10 +67,10 @@
 
       <div class="card-preview">
         <div>
-          <img class="thumbnail" src="/youtubeimages/thumbnail-3.webp">
+          <img class="thumbnail" src="youtubeimages/thumbnail-3.webp">
         </div>
         <div class="grid-video-info">
-          <div class="profile"><img class="channel-profile" src="/youtubeimages/channel-3.jpeg" alt="">
+          <div class="profile"><img class="channel-profile" src="youtubeimages/channel-3.jpeg" alt="">
           </div>
           <div class="title">
             <p class="video-title">Crazy Tik Toks Taken Moments Before DISASTER</p>
@@ -81,10 +81,10 @@
       </div>
       <div class="card-preview">
         <div>
-          <img class="thumbnail" src="/youtubeimages/thumbnail-4.webp">
+          <img class="thumbnail" src="youtubeimages/thumbnail-4.webp">
         </div>
         <div class="grid-video-info">
-          <div class="profile"><img class="channel-profile" src="/youtubeimages/channel-4.jpeg" alt="">
+          <div class="profile"><img class="channel-profile" src="youtubeimages/channel-4.jpeg" alt="">
           </div>
           <div class="title">
             <p class="video-title">TThe Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
@@ -96,10 +96,10 @@
 
       <div class="card-preview">
         <div>
-          <img class="thumbnail" src="/youtubeimages/thumbnail-5.webp">
+          <img class="thumbnail" src="youtubeimages/thumbnail-5.webp">
         </div>
         <div class="grid-video-info">
-          <div class="profile"><img class="channel-profile" src="/youtubeimages/channel-5.jpeg" alt="">
+          <div class="profile"><img class="channel-profile" src="youtubeimages/channel-5.jpeg" alt="">
           </div>
           <div class="title">
             <p class="video-title">Kadane's Algorithm to Maximum Sum Subarray Problem</p>
@@ -111,10 +111,10 @@
 
       <div class="card-preview">
         <div>
-          <img class="thumbnail" src="/youtubeimages/thumbnail-6.webp">
+          <img class="thumbnail" src="youtubeimages/thumbnail-6.webp">
         </div>
         <div class="grid-video-info">
-          <div class="profile"><img class="channel-profile" src="/youtubeimages/channel-6.jpeg" alt="">
+          <div class="profile"><img class="channel-profile" src="youtubeimages/channel-6.jpeg" alt="">
           </div>
           <div class="title">
             <p class="video-title">
@@ -126,10 +126,10 @@
       </div>
       <div class="card-preview">
         <div>
-          <img class="thumbnail" src="/youtubeimages/thumbnail-7.webp">
+          <img class="thumbnail" src="youtubeimages/thumbnail-7.webp">
         </div>
         <div class="grid-video-info">
-          <div class="profile"><img class="channel-profile" src="/youtubeimages/channel-7.jpeg" alt="">
+          <div class="profile"><img class="channel-profile" src="youtubeimages/channel-7.jpeg" alt="">
           </div>
           <div class="title">
             <p class="video-title">Why Planes Don't Fly Over Tibet</p>
@@ -141,10 +141,10 @@
 
       <div class="card-preview">
         <div>
-          <img class="thumbnail" src="/youtubeimages/thumbnail-8.webp">
+          <img class="thumbnail" src="youtubeimages/thumbnail-8.webp">
         </div>
         <div class="grid-video-info">
-          <div class="profile"><img class="channel-profile" src="/youtubeimages/channel-8.jpeg" alt="">
+          <div class="profile"><img class="channel-profile" src="youtubeimages/channel-8.jpeg" alt="">
           </div>
           <div class="title">
             <p class="video-title">Inside The World's Biggest Passenger Plane</p>
@@ -156,10 +156,10 @@
 
       <div class="card-preview">
         <div>
-          <img class="thumbnail" src="/youtubeimages/thumbnail-9.webp">
+          <img class="thumbnail" src="youtubeimages/thumbnail-9.webp">
         </div>
         <div class="grid-video-info">
-          <div class="profile"><img class="channel-profile" src="/youtubeimages/channel-9.jpeg" alt="">
+          <div class="profile"><img class="channel-profile" src="youtubeimages/channel-9.jpeg" alt="">
           </div>
           <div class="title">
             <p class="video-title">The SECRET to Super Human STRENGTH</p>
